tests/sumo/output/vtypeprobe/errors/file_empty/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'file' in definition of vTypeProbe 'test1' is empty.
Quitting (on error).
